# the_modern_cpp_challange

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  clangd.yaml  conanfile.txt
cmake/: cmake_utils.cmake
math_problems/: CMakeLists.txt  task1.cpp  task2_gcd.cpp  task2_gcd.g.cpp  task2_gcd.m.cpp  task3_lcm.cpp  task3_lcm.g.cpp  task3_lcm.m.cpp  task4.cpp  task4.g.cpp  task4.h  task4.m.cpp  task5_sexy_primes.cpp  task5_sexy_primes.g.cpp  task5_sexy_primes.h
src/algorithms_and_data_structures/: README.md
src/algorithms_and_data_structures/45_priority_queue/: 45_priority_queue.g.cpp  CMakeLists.txt  priority_queue.h
src/archives_images_databases/: CMakeLists.txt  README.md
src/archives_images_databases/79_finding_file_in_a_zip_archive/: 79_finding_file_in_a_zip_archive.g.cpp  79_finding_file_in_a_zip_archive.h  CMakeLists.txt
src/concurrency/: README.md
src/concurrency/61_parallel_transform/: 61_parallel_transform.g.cpp  61_parallel_transform.h  CMakeLists.txt
src/concurrency/62_parallel_minmax_threads/: 62_parallel_minmax_threads.g.cpp  CMakeLists.txt  parallel_minmax.hpp
src/concurrency/63_parallel_minmax_async/: 63_parallel_minmax_async.g.cpp  CMakeLists.txt  parallel_minmax.hpp
src/cryptography/: README.md
src/cryptography/88_caesar_cipher/: 88_ceaser_cipher.g.cpp  88_ceaser_cipher.h  CMakeLists.txt
src/data_serialization/: CMakeLists.txt  README.md
src/data_serialization/73_xml_serialization/: 73_xml_serialization.g.cpp  CMakeLists.txt  movie.h  xml_serializer.h
src/data_serialization/74_xml_xpath/: 74_xml_xmpath.g.cpp  CMakeLists.txt
src/date_and_time/: README.md
src/date_and_time/39_function_execution_time/: 39_exec_timer.g.cpp  CMakeLists.txt  exec_timer.h
src/date_and_time/function_execution_time/: exec_timer.h
src/design_patterns/: README.md
src/design_patterns/67_validating_passwords/: 67_password_validator.g.cpp  CMakeLists.txt  password_validator.h
src/language_features/: CMakeLists.txt  README.md
src/language_features/15_ipv4_data_type/: 15_ipv4_data_type.g.cpp  CMakeLists.txt  ipv4.cpp  ipv4.h
src/language_features/task1/: CMakeLists.txt  ipv4.cpp  ipv4.m.cpp
src/math_problems/: CMakeLists.txt  README.md  task10_greycode.g.cpp  task4.h  task5_sexy_primes.h  task6_abundant_numbers.g.cpp  task6_abundant_numbers.h  task7_amicable_numbers.g.cpp  task7_amicable_numbers.h  task7_amicable_numbers.m.cpp  task8_armstrong_numbers.g.cpp  task8_armstrong_numbers.h  task8_armstrong_numbers.m.cpp
src/math_problems/10_graycode/: 10_graycode.h  10_graycode.m.cpp  10_greycode.g.cpp  CMakeLists.txt  graycode.hpp
src/math_problems/11_numbers_to_roman/: 11_numbers_to_roman.g.cpp  11_numbers_to_roman.m.cpp  CMakeLists.txt  numbers_to_roman.hpp
src/math_problems/12_collatz_sequence/: 12_collatz_sequence.g.cpp  CMakeLists.txt  collatz_sequence.hpp
src/math_problems/13_compute_pi_value/: 13_compute_pi_value.g.cpp  CMakeLists.txt  compute_pi.hpp
src/math_problems/14_isbn/: 14_isbn_validator.g.cpp  CMakeLists.txt  isbn.hpp
src/math_problems/1_sum_of_naturals_div_by_3_and_5/: 1_sum_of_naturals_div_by_3_and_5.g.cpp  1_sum_of_naturals_div_by_3_and_5.m.cpp  CMakeLists.txt
src/math_problems/2_gcd/: 2_gcd.g.cpp  CMakeLists.txt
src/math_problems/3_lcm/: 3_lcm.g.cpp  CMakeLists.txt
src/math_problems/4_largest_prime_smaller_than_number/: 4_largest_prime_smaller_than_number.g.cpp  4_largest_prime_smaller_than_number.m.cpp  CMakeLists.txt  largest_prime.hpp
src/math_problems/5_sexy_primes/: 5_sexy_primes.g.cpp  5_sexy_primes.m.cpp  CMakeLists.txt  sexy_primes.hpp
src/math_problems/6_abundant_numbers/: 6_abundant_numbers.g.cpp  6_abundant_numbers.m.cpp  CMakeLists.txt  abundant_numbers.hpp
src/math_problems/7_amicable_numbers/: 7_amicable_numbers.g.cpp  7_amicable_numbers.m.cpp  CMakeLists.txt  amicable_numbers.hpp
src/math_problems/8_armstrong_numbers/: 8_armstrong_numbers.g.cpp  8_armstrong_numbers.m.cpp  CMakeLists.txt  armstrong_numbers.hpp
src/math_problems/9_prime_factors_of_a_number/: 9_prime_factors.g.cpp  9_prime_factors.m.cpp  CMakeLists.txt  prime_factors.hpp
src/math_problems/task1/: task1.g.cpp  task1.h  task1.m.cpp
src/math_problems/task10_graycode/: task10_graycode.m.cpp  task10_greycode.g.cpp
src/math_problems/task3_lcm/: task3_lcm.g.cpp
src/math_problems/task5_sexy_primes/: task5_sexy_primes.m.cpp
src/networking_and_services/: README.md
src/networking_and_services/95_ip_address/: 95_ip_address.hpp  (+2 more)
src/streams_and_filesystem/: README.md
src/strings_and_regexps/: README.md
src/utils/: concepts.h  io_utils.h  math_utils.h  str_utils.h
utils/: io_utils.h  io_utils.hpp
(+19 files in other folders)
